Environment/local/argocd/apps/splitwise/runtime/dev/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: splitwise-dev
  annotations:
    link.argocd.argoproj.io/external-link: http://kafka-ui-dev.localtest.me:8080
spec:
  ingressClassName: traefik
  rules:
    - host: kafka-ui-dev.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
